# intro-project-rust

./: Cargo.toml  LICENSE  README.md
src/: main.rs  math.rs  url_open.rs
templates/: index.hbs
